Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/deploying-to-google-cloud.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/deploying-to-google-cloud.adoc.po
@@ -66,7 +66,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-google-cloud.adoc:21
 msgid "For this guide you need:"
-msgstr ""
+msgstr "このガイドには以下が必要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-google-cloud.adoc:23
@@ -101,7 +101,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-google-cloud.adoc:32
 msgid "Make sure you have the getting-started application at hand, or clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]. The solution is located in the `getting-started` directory."
-msgstr ""
+msgstr "手元に get-started アプリケーションがあることを確認するか、Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、もしくは {quickstarts-archive-url}[archive] をダウンロードしてください。ソリューションは `getting-started` ディレクトリーにあります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-google-cloud.adoc:36
