--- a/l10n/po/ja_JP/_versions/1.11/guides/deploying-to-azure-cloud.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/deploying-to-azure-cloud.adoc.po
@@ -71,7 +71,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:22
 msgid "For this guide you need:"
-msgstr ""
+msgstr "このガイドには以下が必要です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:24
@@ -81,17 +81,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:25
 msgid "having access to an Azure subscription. https://azure.microsoft.com/free/?WT.mc_id=opensource-quarkus-brborges[Get a free one here]"
-msgstr ""
+msgstr "Azure サブスクリプションにアクセスできること。 link:https://azure.microsoft.com/free/?WT.mc_id=opensource-quarkus-brborges[無料のものを入手するには、ここをクリック] 。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:27
 msgid "This guide will take as input a native application developed in the link:building-native-image[building native image guide]."
-msgstr ""
+msgstr "このガイドでは、 link:building-native-image[ネイティブイメージのビルド] で開発されたネイティブアプリケーションを入力として受け取ります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:29
 msgid "Make sure you have the getting-started application at hand, or clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]. The solution is located in the `getting-started` directory."
-msgstr ""
+msgstr "手元に get-started アプリケーションがあることを確認するか、Git リポジトリをクローンします: `git clone {quickstarts-clone-url}` 、もしくは {quickstarts-archive-url}[archive] をダウンロードしてください。ソリューションは `getting-started` ディレクトリーにあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:30
@@ -102,17 +102,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:33
 msgid "If you correctly followed the link:building-native-image[building native image guide], you should have a local container image named `quarkus-quickstart/getting-started`."
-msgstr ""
+msgstr "link:building-native-image[ネイティブイメージのビルド] に正しく従っていれば、 `quarkus-quickstart/getting-started` という名前のローカルコンテナーイメージがあるはずです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:35
 msgid "While Quarkus by default runs on port 8080, most Azure services expect web applications to be running on port 80. Before we continue, go back to your quickstart code and open the file `src/main/docker/Dockerfile.native`."
-msgstr ""
+msgstr "Quarkusはデフォルトではポート 8080 で動作しますが、ほとんどのAzureサービスでは、ウェブアプリケーションがポート 80 で動作することを想定しています。続ける前に、クイックスタートコードに戻り、 `src/main/docker/Dockerfile.native`  を開いてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:37
 msgid "Change the last two commands in the `Dockerfile.native` file and make it read like this:"
-msgstr ""
+msgstr "`Dockerfile.native` ファイルの最後の 2 つのコマンドを変更して、以下のように読み込み可能にします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:42
@@ -125,7 +125,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:45
 msgid "Now you can rebuild the docker image:"
-msgstr ""
+msgstr "これでdockerイメージをリビルドすることができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:49
@@ -136,7 +136,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:52
 msgid "To test, run it by exposing port 80 into port 8080 in your host:"
-msgstr ""
+msgstr "テストのときは、自分のホストでポート80を8080に公開して実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:56
@@ -147,22 +147,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:59
 msgid "Your container image is now ready to run on Azure. Remember, the Quarkus application is mapped to run on port 80."
-msgstr ""
+msgstr "これで、コンテナーイメージをAzure上で実行する準備が整いました。Quarkusアプリケーションは、ポート80で実行するようにマッピングされていることを覚えておいてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:63
 msgid "To ease the user experience throughout this guide, it is better to have the Azure CLI installed and authenticated."
-msgstr ""
+msgstr "このガイド全体を通してユーザー体験を容易にするために、Azure CLI をインストールして認証を受けた方が良いでしょう。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:65
 msgid "Visit the https://docs.microsoft.com/cli/azure/install-azure-cli?view=azure-cli-latest?WT.mc_id=opensource-quarkus-brborges[Azure CLI] installation page for instructions specific to your operating system."
-msgstr ""
+msgstr "お使いのオペレーティングシステムに固有の手順については、 link:https://docs.microsoft.com/cli/azure/install-azure-cli?view=azure-cli-latest?WT.mc_id=opensource-quarkus-brborges[Azure CLI] のインストールページを参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:67
 msgid "Once installed, ensure you are authenticated:"
-msgstr ""
+msgstr "インストールしたら、認証されていることを確認してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:71
@@ -179,12 +179,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:76
 msgid "It is possible to deploy images hosted on Docker Hub, but this location by default leaves images accessible to anyone. To better protect your container images, this guide shows how to host your images on a private instance of the Azure Container Registry service."
-msgstr ""
+msgstr "Docker Hub上にホストされたイメージをデプロイすることは可能ですが、この場所はデフォルトでは誰でもイメージにアクセスできる状態になっています。コンテナーイメージをよりよく保護するために、このガイドでは、Azure Container Registry サービスのプライベートインスタンス上でイメージをホストする方法を示します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:78
 msgid "First, create an Azure Resource Group:"
-msgstr ""
+msgstr "まず、Azure Resource Groupを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:82
@@ -195,7 +195,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:85
 msgid "Then you can create the ACR:"
-msgstr ""
+msgstr "そうすれば、ACRを作成することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:89
@@ -206,7 +206,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:92
 msgid "Finally, authenticate your local Docker installation with this container registry by running:"
-msgstr ""
+msgstr "最後に、このコンテナーレジストリーを実行して、ローカルのDockerインストールを認証します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:96
@@ -223,12 +223,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:101
 msgid "If you've followed the build native image guide, you should have a local container image named `quarkus-quickstart/getting-started`."
-msgstr ""
+msgstr "ビルドネイティブイメージガイドに従っていれば、 `quarkus-quickstart/getting-started` という名前のローカルコンテナーイメージがあるはずです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:103
 msgid "To upload this image to your ACR, you must tag and push the image under the ACR login server. To find the login server of the Azure Container Registry, run this command:"
-msgstr ""
+msgstr "このイメージをACRにアップロードするには、ACRログインサーバーの下にタグを付けてイメージをプッシュする必要があります。Azure Container Registryのログインサーバーを見つけるには、次のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:107
@@ -239,7 +239,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:110
 msgid "To upload, now do:"
-msgstr ""
+msgstr "アップロードするには、次のようにします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:115
@@ -252,7 +252,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:118
 msgid "At this point, you should have your Quarkus container image on your Azure Container Registry. To verify, run the following command:"
-msgstr ""
+msgstr "この時点で、Azure Container Registry上にQuarkusコンテナーイメージがあるはずです。確認するには、次のコマンドを実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:122
@@ -269,17 +269,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:127
 msgid "The simplest way to start this container in the cloud is with the Azure Container Instances service. It simply creates a container on Azure infrastructure."
-msgstr ""
+msgstr "このコンテナーをクラウド上で起動する最もシンプルな方法は、Azure Container Instancesサービスです。これは、Azureインフラストラクチャ上にコンテナーを作成するだけです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:129
 msgid "There are different approaches for using ACI. Check the documentation for details. The quickest way to get a container up and running goes as it follows."
-msgstr ""
+msgstr "ACIを使用するためには、さまざまなアプローチがあります。詳細はドキュメントを確認してください。コンテナーを起動して稼働させるための最も手っ取り早い方法は以下の通りです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:131
 msgid "First step is to find the username and password for the admin, so that ACI can authenticate into ACR and pull the Docker image:"
-msgstr ""
+msgstr "最初のステップは、ACIがACRに認証してDockerイメージをプルできるように、管理者のユーザー名とパスワードを見つけることです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:135
@@ -290,7 +290,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:138
 msgid "Now create the Docker instance on ACI pointing to your image on ACR:"
-msgstr ""
+msgstr "ACR上のイメージを指すACI上にDockerインスタンスを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:150
@@ -310,12 +310,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:153
 msgid "The command above, if run successfully, will give you the address of your container in the Cloud. Access your Quarkus application in the address displayed as output."
-msgstr ""
+msgstr "上記のコマンドの実行が成功すると、クラウド上のコンテナーのアドレスが表示されます。出力として表示されるアドレスでQuarkusアプリケーションにアクセスします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:155
 msgid "For more information and details on ACR authentication and the use of service principals, follow this guide below and remember the Azure Container Registry `loginServer` and the image name of your Quarkus application now hosted on the ACR."
-msgstr ""
+msgstr "ACR認証とサービスプリンシパルの使用の詳細と詳細については、以下のガイドに従ってください。Azure Container Registry `loginServer` と、現在ACRでホストされているQuarkusアプリケーションのイメージ名を覚えておいてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:157
@@ -325,7 +325,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:159
 msgid "Keep in mind that this service does not provide scalability. A container instance is unique and does not scale."
-msgstr ""
+msgstr "このサービスはスケーラビリティを提供しないことを覚えておいてください。コンテナーインスタンスは単一であり、スケーラビリティを提供しません。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:160
@@ -336,7 +336,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:163
 msgid "You can also deploy the container image as a microservice in a Kubernetes cluster on Azure. To do that, follow this tutorial:"
-msgstr ""
+msgstr "また、コンテナーイメージをマイクロサービスとしてAzure上のKubernetesクラスターにデプロイすることもできます。そのためには、このチュートリアルに従ってください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:165
@@ -346,7 +346,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:167
 msgid "Once deployed, the application will be running on whatever port is used to expose the service. By default, Quarkus apps run on port 8080 internally."
-msgstr ""
+msgstr "デプロイされると、アプリケーションは、サービスを公開するために使用されるポートであれば何でも実行されます。デフォルトでは、Quarkusアプリケーションは内部的にポート8080で実行されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:168
@@ -357,12 +357,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:171
 msgid "This service provides scalability out of the box for web applications. If more instances are required, it will provide a load-balancing automatically, plus monitoring, metrics, logging and so on."
-msgstr ""
+msgstr "このサービスは、Webアプリケーションのスケーラビリティを提供します。より多くのインスタンスが必要な場合は、自動的に負荷分散を行い、監視、メトリクス、ロギングなどを提供します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:173
 msgid "To deploy your Quarkus Native container image to this service, follow this tutorial:"
-msgstr ""
+msgstr "Quarkus Nativeコンテナーイメージをこのサービスにデプロイするには、このチュートリアルに従います。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/deploying-to-azure-cloud.adoc:175
