Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/azure-functions-http.adoc.po
@@ -28,12 +28,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:13
 msgid "The `quarkus-azure-functions-http` extension allows you to write microservices with RESTEasy (JAX-RS), Undertow (servlet), Vert.x Web, or link:funqy-http[Funqy HTTP] and make these microservices deployable to the Azure Functions runtime."
-msgstr ""
+msgstr "`quarkus-azure-functions-http` エクステンションを使うと、RESTEasy (JAX-RS)、Undertow (サーブレット)、Vert.x Web、または link:funqy-http[Funqy HTTP] を使ってマイクロサービスを書き、これらのマイクロサービスをAzure Functionsランタイムにデプロイできるようにすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:15
 msgid "One azure function deployment can represent any number of JAX-RS, servlet, Vert.x Web, or link:funqy-http[Funqy HTTP] endpoints."
-msgstr ""
+msgstr "1 つの Azure Functions デプロイメントでは、JAX-RS、サーブレット、Vert.x Web、または link:funqy-http[Funqy HTTP] エンドポイントを任意の数だけ代表できます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:18
@@ -64,7 +64,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:26
 msgid "https://azure.microsoft.com[An Azure Account].  Free accounts work."
-msgstr ""
+msgstr "link:https://azure.microsoft.com[Azureのアカウント]  。無料アカウントでも大丈夫です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:27
@@ -79,7 +79,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:33
 msgid "This guide walks you through running a Maven Archetype to generate a sample project that contains three http endpoints written with JAX-RS APIs, Servlet APIs, Vert.x Web, or link:funqy-http[Funqy HTTP] APIs.  After building, you will then be able to deploy to Azure."
-msgstr ""
+msgstr "このガイドでは、JAX-RS API、Servlet API、Vert.x Web、または link:funqy-http[Funqy HTTP] APIで記述された3つのHTTPエンドポイントを含むサンプルプロジェクトを生成するために、Maven Archetype のウォークスルーを行います。ビルド後、Azureにデプロイできるようになります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:34
@@ -90,7 +90,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:37
 msgid "Create the azure maven project for your Quarkus application using our Maven Archetype."
-msgstr ""
+msgstr "Maven Archetypeを使用して、Quarkusアプリケーション用の Azure mavenプロジェクトを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:45
@@ -105,22 +105,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:48
 msgid "Running this command will run maven in interactive mode and it will ask you to fill in some build properties:"
-msgstr ""
+msgstr "このコマンドを実行すると、インタラクティブモードでmavenが実行され、いくつかのビルドプロパティーの入力を求められます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:50
 msgid "`groupId` - The maven groupId of this generated project.  Type in `org.acme`."
-msgstr ""
+msgstr "`groupId` - この生成されたプロジェクトの maven グループ ID。 `org.acme` と入力します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:51
 msgid "`artifactId` - The maven artifactId of this generated project. Type in `quarkus-demo`"
-msgstr ""
+msgstr "`artifactId` - この生成されたプロジェクトの maven artifactId。を入力します。 `quarkus-demo` と入力します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:52
 msgid "`version` - Version of this generated project."
-msgstr ""
+msgstr "`version` - この生成されたプロジェクトのバージョン。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:53
@@ -130,27 +130,27 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:54
 msgid "`appName` - Use the default value.  This is the application name in Azure.  It must be a unique subdomain name under `*.azurewebsites.net`. Otherwise deploying to Azure will fail."
-msgstr ""
+msgstr "`appName` - 既定値を使用します。これは、Azure でのアプリケーション名です。 `*.azurewebsites.net` 以下の一意のサブドメイン名である必要があります。そうしないと、Azure へのデプロイに失敗します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:55
 msgid "`appRegion` - Defaults to `westus`.  Dependent on your azure region."
-msgstr ""
+msgstr "`appRegion` - デフォルトは `westus` です。お使いの azure リージョンに依存します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:56
 msgid "`function` - Use the default which is `quarkus`.  Name of your azure function. Can be anything you want."
-msgstr ""
+msgstr "`function` - デフォルトの `quarkus` を使用してください。あなたの azure 関数の名前。何でも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:57
 msgid "`resourceGroup` - Use the default value.  Any value is fine though."
-msgstr ""
+msgstr "`resourceGroup` - デフォルト値を使用してください。どんな値でも構いません。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:59
 msgid "The values above are defined as properties in the generated `pom.xml` file."
-msgstr ""
+msgstr "上記の値は、生成された `pom.xml` ファイルのプロパティーとして定義されています。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:60
@@ -161,7 +161,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:63
 msgid "If you don't login to Azure you won't be able to deploy."
-msgstr ""
+msgstr "Azureにログインしないとデプロイできません。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:67
@@ -173,12 +173,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:69
 #, no-wrap
 msgid "Build and Deploy to Azure"
-msgstr ""
+msgstr "ビルドと Azure へのデプロイ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:74
 msgid "The `pom.xml` you generated in the previous step pulls in the `azure-functions-maven-plugin`.  Running maven install generates config files and a staging directory required by the `azure-functions-maven-plugin`.  Here's how to execute it."
-msgstr ""
+msgstr "前のステップで生成した `pom.xml` は、 `azure-functions-maven-plugin` .maven install を実行すると、設定ファイルと `azure-functions-maven-plugin` によって必要とされるステージングディレクトリーが生成されます。実行方法は以下の通りです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:78
@@ -189,17 +189,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:82
 msgid "If you haven't already created your function up at azure, the will build an uber-jar, package it, create the function at Azure, and deploy it."
-msgstr ""
+msgstr "あなたがまだ Azure で Function を作成していない場合は、uber-jar をビルドしてパッケージ化し、Azure で Function を作成してデプロイします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:84
 msgid "If deployment is a success, the azure plugin will tell you the base URL to access your function."
-msgstr ""
+msgstr "デプロイが成功した場合、azure プラグインは Function にアクセスするためのベース URL を教えてくれます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:86
 msgid "i.e."
-msgstr ""
+msgstr "例えば"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:89
@@ -210,28 +210,28 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:92
 msgid "The URL to access the service would be"
-msgstr ""
+msgstr "サービスにアクセスするためのURLは次のようになります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:97
 msgid "https://{appName}.azurewebsites.net/api/hello https://{appName}.azurewebsites.net/api/servlet/hello https://{appName}.azurewebsites.net/api/vertx/hello https://{appName}.azurewebsites.net/api/funqyHello"
-msgstr ""
+msgstr "https://{appName}.azurewebsites.net/api/ https://{appName}.azurewebsites.net/api/hello https://{appName}.azurewebsites.net/api/servlet/hello hello https://{appName}.azurewebsites.net/api/ https://{appName}.azurewebsites.net/api/vertx/hello https://{appName}.azurewebsites.net/api/funqyHello"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:98
 #, no-wrap
 msgid "Extension maven dependencies"
-msgstr ""
+msgstr "エクステンションのmaven依存関係"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:103
 msgid "The sample project includes the RESTEasy, Undertow, Vert.x Web, link:funqy-http[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-vertx-web`."
-msgstr ""
+msgstr "サンプルプロジェクトには、RESTEasy、Undertow、Vert.x Web、 link:funqy-http[Funqy HTTP] エクステンションが含まれています。これらのAPIの1つだけを使用している場合(つまりjax-rsのみ)は、`quarkus-resteasy` , `quarkus-undertow` , `quarkus-funqy-http` , , および/または `quarkus-vertx-web` などのそれぞれmavenの依存関係を削除してください "
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:106
 msgid "You must include the `quarkus-azure-functions-http` extension as this is a generic bridge between the Azure Functions runtime and the HTTP framework you are writing your microservices in."
-msgstr ""
+msgstr "`quarkus-azure-functions-http` エクステンションを含める必要があります。これは、Azure Functions ランタイムとマイクロサービスを書いている HTTP フレームワークの間の一般的なブリッジです。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:107
@@ -242,7 +242,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:111
 msgid "Templates for Azure Functions deployment descriptors (`host.json`, `function.json`) are within the `azure-config` directory.  Edit them as you need to.  Rerun the build when you are ready."
-msgstr ""
+msgstr "Azure Functions デプロイメントディスクリプタのテンプレート ( `host.json` , `function.json` ) は、 `azure-config` ディレクトリー内にあります。必要に応じて編集してください。準備ができたらビルドを再実行します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:114
@@ -250,20 +250,20 @@ msgstr ""
 msgid ""
 "*NOTE*: If you change the `function.json` `path` attribute or if you add a `routePrefix`,\n"
 "your jax-rs endpoints won't route correctly.  See <<config-azure-paths>> for more information.\n"
-msgstr ""
+msgstr "*注* : `function.json` `path` 属性を変更したり、 `routePrefix` を追加したりすると、jax-rs エンドポイントは正しくルーティングされません。詳細は link:#config-azure-paths[[config-azure-paths] ] を参照してください。\n"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:117
 #, no-wrap
 msgid "Configuring Root Paths"
-msgstr ""
+msgstr "ルートパスの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:122
 msgid "The default route prefix for an Azure Function is `/api`.  All of your JAX-RS, Servlet, Vert.x Web, and link:funqy-http[Funqy HTTP] endpoints must explicitly take this into account.  In the generated project this is handled by the `quarkus.http.root-path` switch in `application.properties`"
-msgstr ""
+msgstr "Azure Function のデフォルトのルートプレフィックスは `/api` です。すべてのJAX-RS、サーブレット、Vert.x Web、および link:funqy-http[Funqy HTTP] エンドポイントは、これを明示的に考慮しなければなりません。生成されたプロジェクトでは、これは `application.properties` の `quarkus.http.root-path` スイッチで制御できます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/azure-functions-http.adoc:125
 msgid "If you modify the `path` or add a `routePrefix` within the `azure-config/function.json` deployment descriptor, your code or configuration must also reflect any prefixes you specify for your path."
-msgstr ""
+msgstr "`path` を変更したり、 `azure-config/function.json` デプロイメントディスクリプタ内に `routePrefix` を追加したりする場合、コードや設定にはパスに指定した接頭辞も反映させる必要があります。"
