--- a/l10n/po/ja_JP/_guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_guides/neo4j.adoc.po
@@ -836,7 +836,7 @@ msgstr "ドライバーのメトリクス"
 #: upstream/_guides/neo4j.adoc:406
 #, fuzzy
 msgid "If you are using a metrics extension and specify the config property `quarkus.neo4j.pool.metrics-enabled=true`, the Neo4j extension will expose several metrics related to the Neo4j connection pool."
-msgstr "メトリクス拡張を使用していて、configプロパティー `quarkus.neo4j.pool.metrics-enabled=true` を指定している場合、Neo4j拡張は、Neo4j接続プールに関連したいくつかのメトリクスを公開します。"
+msgstr "メトリクスエクステンションを使用していて、configプロパティー `quarkus.neo4j.pool.metrics-enabled=true` を指定している場合、Neo4jエクステンションは、Neo4j接続プールに関連したいくつかのメトリクスを公開します。"
 
 #. type: Title ===
 #: upstream/_guides/neo4j.adoc:407
