--- a/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-data-panache.adoc.po
@@ -141,7 +141,7 @@ msgstr "リソースの生成"
 #. type: Plain text
 #: upstream/_guides/rest-data-panache.adoc:77
 msgid "REST Data with Panache generates JAX-RS resources based on the interfaces available in your application.  For each entity and repository that you want to generate, provide a resource interface.  _Do not implement these interfaces and don't provide custom methods because they will be ignored._ You can, however, override the methods from the extended interface in order to customize them (see the section at the end)."
-msgstr "REST Data with Panache は、アプリケーションで利用可能なインターフェイスに基づいて JAX-RS リソースを生成します。生成したい各エンティティーとリポジトリに対して、リソースインターフェイスを提供してください。 _これらのインターフェイスを実装したり、カスタムメソッドを提供したりしないでください。_ ただし、拡張インターフェースからメソッドをオーバーライドしてカスタマイズすることは可能です(最後のセクションを参照してください)。"
+msgstr "REST Data with Panache は、アプリケーションで利用可能なインターフェイスに基づいて JAX-RS リソースを生成します。生成したい各エンティティーとリポジトリに対して、リソースインターフェイスを提供してください。 _これらのインターフェイスを実装したり、カスタムメソッドを提供したりしないでください。_ ただし、エクステンションインターフェースからメソッドをオーバーライドしてカスタマイズすることは可能です(最後のセクションを参照してください)。"
 
 #. type: Title ===
 #: upstream/_guides/rest-data-panache.adoc:78
