--- a/l10n/po/ja_JP/_guides/topic/architecture.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/architecture.adoc.po
@@ -98,7 +98,7 @@ msgstr "ほとんどの作業はイメージのビルドで行われているの
 #: upstream/_guides/topic/architecture.adoc:43
 #, fuzzy, no-wrap
 msgid "Extension Architecture"
-msgstr "拡張アーキテクチャ"
+msgstr "エクステンションアーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/topic/architecture.adoc:50
