--- a/l10n/po/ja_JP/_posts/2019-06-26-kafka-streams-applications-with-quarkus-and-microprofile.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-06-26-kafka-streams-applications-with-quarkus-and-microprofile.adoc.po
@@ -267,7 +267,7 @@ msgstr "アプリケーションの実行に必要なメモリーの適切な量
 #: upstream/_posts/2019-06-26-kafka-streams-applications-with-quarkus-and-microprofile.adoc:154
 #, fuzzy
 msgid "To give an example, for the https://github.com/quarkusio/quarkus-quickstarts/tree/master/kafka-streams-quickstart[streaming pipeline] discussed in the Kafka Streams extension guide, a heap size of 32 MB (`-Xmx32m`) works very well, resulting in less than 50 MB memory needed by the process in total (RSS, resident set size).  Note that this number also contains the memory needed for the HTTP endpoint defined in that example, which is used for answering interactive queries via REST."
-msgstr "例を挙げると、Kafka Streams 拡張ガイドで説明されている link:https://github.com/quarkusio/quarkus-quickstarts/tree/master/kafka-streams-quickstart[ストリーミングパイプライン] では、ヒープサイズが 32 MB ( `-Xmx32m` ) で非常にうまく機能し、プロセスが必要とするメモリーは合計で 50 MB 未満になります (RSS, レジデントセットサイズ)。この数値には、この例で定義された HTTP エンドポイントに必要なメモリーも含まれていることに注意してください。"
+msgstr "例を挙げると、Kafka Streams エクステンションガイドで説明されている link:https://github.com/quarkusio/quarkus-quickstarts/tree/master/kafka-streams-quickstart[ストリーミングパイプライン] では、ヒープサイズが 32 MB ( `-Xmx32m` ) で非常にうまく機能し、プロセスが必要とするメモリーは合計で 50 MB 未満になります (RSS, レジデントセットサイズ)。この数値には、この例で定義された HTTP エンドポイントに必要なメモリーも含まれていることに注意してください。"
 
 #. type: Title ==
 #: upstream/_posts/2019-06-26-kafka-streams-applications-with-quarkus-and-microprofile.adoc:155
