--- a/l10n/po/ja_JP/_posts/2019-06-27-quarkus-0-18-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-06-27-quarkus-0-18-released.adoc.po
@@ -116,7 +116,7 @@ msgstr "新しいKubernetesクライアントエクステンション"
 #: upstream/_posts/2019-06-27-quarkus-0-18-released.adoc:36
 #, fuzzy
 msgid "We added a Kubernetes client extension, based on the Fabric8 Kubernetes Client, to our extension portfolio."
-msgstr "Fabric8 Kubernetes ClientをベースにしたKubernetesクライアントエクステンションを拡張ポートフォリオに追加しました。"
+msgstr "Fabric8 Kubernetes ClientをベースにしたKubernetesクライアントエクステンションをエクステンションポートフォリオに追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2019-06-27-quarkus-0-18-released.adoc:40
