--- a/l10n/po/ja_JP/_posts/2020-04-08-quarkus-1-3-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-08-quarkus-1-3-2-final-released.adoc.po
@@ -70,7 +70,7 @@ msgstr "バグフィックス"
 #: upstream/_posts/2020-04-08-quarkus-1-3-2-final-released.adoc:19
 #, fuzzy
 msgid "We fixed a couple of regressions introduced recently in the Hibernate ORM extension."
-msgstr "最近Hibernate ORM拡張で導入されたいくつかのリグレッションを修正しました。"
+msgstr "最近Hibernate ORMエクステンションで導入されたいくつかのリグレッションを修正しました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-04-08-quarkus-1-3-2-final-released.adoc:21
