--- a/l10n/po/ja_JP/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-01 13:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 23:09+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.8.1.Final released - Bugfixes, RESTEasy Multipart extension'\n"
@@ -38,25 +38,22 @@ msgstr ""
 "title: Quarkus 1.8.1.1.Finalリリース - バグフィックス、RESTEasy Multipartエクステンション\n"
 "date: 2020-09-18\n"
 "tags: release\n"
-"synopsis: 1.8.1.Finalでは、いくつかの回帰やバグを修正し、RESTEasy Multipart拡張を導入しました。\n"
+"synopsis: 1.8.1.Finalでは、いくつかの回帰やバグを修正し、RESTEasy Multipartエクステンションを導入しました。\n"
 "author: gsmet\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:11
-#, fuzzy
 msgid "Today, we released Quarkus 1.8.1.Final with some bugfixes and documentation improvements."
 msgstr "本日、Quarkus 1.8.1.Finalをリリースし、いくつかのバグフィックスとドキュメントの改善を行いました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:13
-#, fuzzy
 msgid "We also introduced a new RESTEasy Multipart extension to fix an recurring encoding issues with multipart."
-msgstr "また、新しい RESTEasy Multipart 拡張を導入し、multipart で繰り返し発生するエンコーディングの問題を修正しました。"
+msgstr "また、新しい RESTEasy Multipart エクステンションを導入し、multipart で繰り返し発生するエンコーディングの問題を修正しました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:15
-#, fuzzy
 msgid "It is a safe upgrade for everyone using 1.8.0.Final."
 msgstr "1.8.0.Finalを使っている人なら誰でも安心してアップグレードできます。"
 
@@ -68,39 +65,34 @@ msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:19
-#, fuzzy
 msgid "This release is a maintenance release that fixes various bugs found in 1.8.0.Final and provides some documentation updates."
 msgstr "このリリースは、1.8.0.Final で発見された様々なバグを修正し、いくつかのドキュメントを更新するメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:21
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.8.1.Final[the full changelog of 1.8.1.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.8.1.Final[1.8.1.1.Finalの完全な変更履歴はGitHubで] 入手できます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.8.1.Final[GitHubで1.8.1.1.Finalの完全な変更履歴] は入手できます。"
 
 #. type: Title ===
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:22
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "RESTEasy Multipart"
-msgstr "RESTEasy マルチパート"
+msgstr "RESTEasy Multipart"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:25
-#, fuzzy
 msgid "The default encoding for multipart requests in RESTEasy is US-ASCII which is not very convenient in 2020."
 msgstr "RESTEasyでのマルチパートリクエストのデフォルトエンコーディングはUS-ASCIIで、2020年にはあまり便利ではありません。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:28
-#, fuzzy
 msgid "Thanks to the `quarkus-resteasy-multipart` extension, the default encoding is now UTF-8 and it can be configured if needed.  If working with multipart, make sure you use this extension."
-msgstr "`quarkus-resteasy-multipart` 拡張のおかげで、デフォルトのエンコーディングが UTF-8 になり、必要に応じて設定できるようになりました。マルチパートで作業する場合は、この拡張を使用するようにしてください。"
+msgstr "`quarkus-resteasy-multipart` エクステンションのおかげで、デフォルトのエンコーディングが UTF-8 になり、必要に応じて設定できるようになりました。マルチパートに取り組む場合は、このエクステンションを使用するようにしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:30
-#, fuzzy
 msgid "More on this in the link:/guides/rest-json#multipart-support[Writing JSON REST Services guide]."
-msgstr "これについての詳細は、 link:/guides/rest-json#multipart-support[JSON RESTサービスの記述ガイド] を参照してください。"
+msgstr "これについての詳細は、 link:/guides/rest-json#multipart-support[JSON RESTサービスの作成ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2020-09-18-quarkus-1-8-1-final-released.adoc:31
