--- a/l10n/po/ja_JP/_versions/1.11/guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/config-reference.adoc.po
@@ -194,7 +194,7 @@ msgstr "これは、ユーザー定義の設定プロパティーです。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config-reference.adoc:86
 msgid "This is a configuration property consumed by the `quarkus-vertx-http` extension."
-msgstr "これは `quarkus-vertx-http` 拡張モジュールによって消費される設定プロパティーです。"
+msgstr "これは `quarkus-vertx-http` エクステンションによって消費される設定プロパティーです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/config-reference.adoc:88
