--- a/l10n/po/ja_JP/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-01 13:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 23:08+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.8.2.Final released - Bugfixes'\n"
@@ -44,13 +44,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:11
-#, fuzzy
 msgid "Today, we released Quarkus 1.8.2.Final with some bugfixes and documentation improvements."
 msgstr "本日、Quarkus 1.8.2.Finalをリリースし、いくつかのバグフィックスとドキュメントの改善を行いました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:13
-#, fuzzy
 msgid "It is a safe upgrade for everyone using Quarkus 1.8."
 msgstr "Quarkus 1.8を使用しているすべての人にとって安全なアップグレードです。"
 
@@ -62,15 +60,13 @@ msgstr "変更点"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:17
-#, fuzzy
 msgid "This release is a maintenance release that fixes various bugs found in 1.8.1.Final and provides some documentation updates."
 msgstr "このリリースは、1.8.1.Final で発見された様々なバグを修正し、いくつかのドキュメントの更新を提供するメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:19
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.8.2.Final[the full changelog of 1.8.2.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.8.2.Final[1.8.2.Finalの完全な変更履歴はGitHubで] 入手できます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.8.2.Final[GitHubで1.8.2.Finalの完全な変更履歴] は入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2020-10-06-quarkus-1-8-2-final-released.adoc:20
