--- a/l10n/po/ja_JP/_guides/grpc.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc.adoc.po
@@ -3,90 +3,80 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 23:20+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/grpc.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus gRPC"
-msgstr "クォークラスジーアールピーシー"
+msgstr "Quarkus gRPC"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:13
-#, fuzzy
 msgid "https://grpc.io/[gRPC] is a high-performance RPC framework.  It can efficiently connect services implemented using various languages and frameworks.  It is also applicable in the last mile of distributed computing to connect devices, mobile applications, and browsers to backend services."
-msgstr "link:https://grpc.io/[gRPCは] 高性能なRPCフレームワークです。様々な言語やフレームワークを使って実装されたサービスを効率的に接続することができます。また、デバイスやモバイルアプリケーション、ブラウザとバックエンドサービスを接続するために、分散コンピューティングのラストワンマイルにも適用可能です。"
+msgstr "link:https://grpc.io/[gRPC] は高性能なRPCフレームワークです。様々な言語やフレームワークを使って実装されたサービスを効率的に接続することができます。また、デバイスやモバイルアプリケーション、ブラウザとバックエンドサービスを接続するために、分散コンピューティングのラストワンマイルにも適用可能です。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:16
-#, fuzzy
 msgid "In general, gRPC uses HTTP/2, TLS, and https://developers.google.com/protocol-buffers[Protobuf (Protocol Buffers)].  In a microservice architecture, gRPC is an efficient, type-safe alternative to HTTP."
-msgstr "一般的に、gRPCはHTTP/2、TLS、 link:https://developers.google.com/protocol-buffers[Protobuf(プロトコルバッファ)を] 使用します。マイクロサービスアーキテクチャでは、gRPCはHTTPに代わる効率的で型安全な代替手段です。"
+msgstr "一般的に、gRPCはHTTP/2、TLS、 link:https://developers.google.com/protocol-buffers[Protobuf(プロトコルバッファ)] を使用します。マイクロサービスアーキテクチャでは、gRPCはHTTPに代わる効率的で型安全な代替手段です。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:19
-#, fuzzy
 msgid "The Quarkus gRPC extension integrate gRPC in Quarkus application.  It:"
 msgstr "QuarkusのgRPCエクステンションは、QuarkusアプリケーションにgRPCを統合します。それは"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:21
-#, fuzzy
 msgid "supports implementing gRPC services"
-msgstr "gRPCサービスの実装をサポートしています。"
+msgstr "gRPCサービスの実装をサポートしています"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:22
-#, fuzzy
 msgid "supports consuming gRPC services"
-msgstr "gRPC サービスの消費をサポートしています。"
+msgstr "gRPC サービスの利用をサポートしています"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:23
-#, fuzzy
 msgid "integrates with the reactive engine from Quarkus as well as the reactive development model"
-msgstr "は、Quarkusのリアクティブエンジンやリアクティブ開発モデルと統合されています。"
+msgstr "Quarkusのリアクティブエンジンやリアクティブ開発モデルと統合されています"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:24
-#, fuzzy
 msgid "allows plain-text communication as well as TLS, and TLS with mutual authentication"
-msgstr "平文通信に加えてTLS、相互認証付きのTLSも可能です。"
+msgstr "平文通信に加えてTLS、相互認証付きのTLSも可能です"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:26
-#, fuzzy
 msgid "Quarkus gRPC is based on https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC]."
-msgstr "Quarkus gRPCは link:https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPCを] ベースにしています。"
+msgstr "Quarkus gRPCは link:https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC] をベースにしています。"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:28
-#, fuzzy
 msgid "link:./grpc-getting-started.adoc[Getting Started]"
 msgstr "link:./grpc-getting-started.adoc[はじめに]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
-#, fuzzy
 msgid "link:./grpc-service-implementation.adoc[Implementing a gRPC Service]"
 msgstr "link:./grpc-service-implementation.adoc[gRPCサービスの実装]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
-#, fuzzy
 msgid "link:./grpc-service-consumption.adoc[Consuming a gRPC Service]"
-msgstr "link:./grpc-service-consumption.adoc[gRPC サービスを消費する]"
+msgstr "link:./grpc-service-consumption.adoc[gRPC サービスの利用]"
