Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions.adoc.po
@@ -64,7 +64,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:26
 msgid "https://cloud.google.com/[A Google Cloud Account].  Free accounts work."
-msgstr ""
+msgstr "link:https://cloud.google.com/[Googleクラウドのアカウント] 。無料アカウントでも大丈夫です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:27
@@ -153,7 +153,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:65
 msgid "Login to Google Cloud is necessary for deploying the application and it can be done as follows:"
-msgstr ""
+msgstr "アプリケーションのデプロイにはGoogle Cloudへのログインが必要で、以下のように行います。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:69
