--- a/l10n/po/ja_JP/_versions/1.7/guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/gcp-functions-http.adoc.po
@@ -69,7 +69,7 @@ msgstr "Apache Maven {maven-version}"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:28
 msgid "https://cloud.google.com/[A Google Cloud Account].  Free accounts work."
-msgstr ""
+msgstr "link:https://cloud.google.com/[Googleクラウドのアカウント] 。無料アカウントでも大丈夫です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:29
@@ -133,7 +133,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:60
 msgid "Login to Google Cloud is necessary for deploying the application and it can be done as follows:"
-msgstr ""
+msgstr "アプリケーションのデプロイにはGoogle Cloudへのログインが必要で、以下のように行います。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/gcp-functions-http.adoc:64
