--- a/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/command-mode-reference.adoc.po
@@ -3,25 +3,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 23:39+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/command-mode-reference.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Command Mode Applications"
 msgstr "Quarkus - コマンドモードアプリケーション"
 
@@ -106,9 +106,9 @@ msgstr "これにより、 `run()` は Panache Entity 上の `listAll()` や `qu
 
 #. type: Title ===
 #: upstream/_guides/command-mode-reference.adoc:49
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Main method"
-msgstr "主な方法"
+msgstr "Main method"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:51
@@ -190,9 +190,8 @@ msgstr "コマンドモードのアプリケーションを実行する場合、
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:96
-#, fuzzy
 msgid "Start Quarkus"
-msgstr "Quarkusを開始"
+msgstr "Quarkusの起動"
 
 #. type: Plain text
 #: upstream/_guides/command-mode-reference.adoc:97
