--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: 2021-02-22 00:41+0900\n"
+"PO-Revision-Date: 2021-03-06 23:38+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -487,10 +487,8 @@ msgstr "`./mvnw compile quarkus:dev`  でアプリケーションを実行する
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:219
-#, fuzzy
-#| msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `-runner.jar` file.  You can also generate the native executable using `./mvnw clean package -Pnative`."
 msgid "As usual, the application can be packaged using `./mvnw clean package` and executed using the `target/quarkus-app/quarkus-run.jar` file.  You can also generate the native executable using `./mvnw clean package -Pnative`."
-msgstr "いつものように、 `./mvnw clean package`  を使ってアプリケーションをパッケージ化し、 `-runner.jar`  ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative`  を使用してネイティブの実行ファイルを生成することもできます。"
+msgstr "いつものように、 `./mvnw clean package`  を使ってアプリケーションをパッケージ化し、 `target/quarkus-app/quarkus-run.jar` ファイルを使って実行することができます。また、 `./mvnw clean package -Pnative` を使用してネイティブの実行ファイルを生成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:220
