--- a/l10n/po/ja_JP/_guides/topic/publications.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/publications.adoc.po
@@ -3,48 +3,49 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-01 13:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 23:53+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_guides/topic/publications.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_guides/topic/publications.adoc:4
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: publications\n"
 "permalink: /publications/\n"
 "---\n"
-msgstr "layout: publications permalink./出版物/ ---."
+msgstr ""
+"layout: publications\n"
+"permalink: /publications/\n"
+"---\n"
 
 #. type: Title =
 #: upstream/_guides/topic/publications.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "{project-name} - Publications"
-msgstr "プロジェクト名} - 出版物"
+msgstr "{project-name} - 出版物"
 
 #. type: Plain text
 #: upstream/_guides/topic/publications.adoc:9
-#, fuzzy
 msgid "Below is a list of articles, blogs, podcast and other tidbits published online around {project-name}."
-msgstr "以下は、{project-name}周辺でオンラインで公開されている記事、ブログ、ポッドキャスト、その他の豆知識のリストです。"
+msgstr "以下は、{project-name}関連でオンラインで公開されている記事、ブログ、ポッドキャスト、その他の豆知識のリストです。"
 
 #. type: Plain text
 #: upstream/_guides/topic/publications.adoc:10
-#, fuzzy
 msgid "If you believe we are missing an article, blog or video https://github.com/quarkusio/quarkusio.github.io[submit an issue]."
-msgstr "記事、ブログ、ビデオが不足していると思われる場合は、 link:https://github.com/quarkusio/quarkusio.github.io[問題を提出して] ください。"
+msgstr "記事、ブログ、ビデオが不足していると思われる場合は、 link:https://github.com/quarkusio/quarkusio.github.io[Issueを登録] してください。"
