--- a/l10n/po/ja_JP/_guides/topic/standards.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/standards.adoc.po
@@ -3,22 +3,22 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-01 13:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-06 23:54+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
@@ -36,9 +36,9 @@ msgstr ""
 
 #. type: Title =
 #: upstream/_guides/topic/standards.adoc:7
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "{project-name} - Our View on Standards"
-msgstr "プロジェクト名} - 標準化の考え方"
+msgstr "{project-name} - 標準に対するスタンス"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:13
